<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="14dp"
    android:background="@drawable/coffee"
    android:columnCount="4"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_columnSpan="4"
        android:background="#444444"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button"
        android:text="@string/key_1"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button"
        android:text="@string/key_2"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button"
        android:text="@string/key_3"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button"
        android:text="@string/key_plus"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_4"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_5"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_6"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_minus"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_7"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_8"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_9"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_multiply"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_dot"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_0"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_equals"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_division"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/key_reset"
        android:textColor="#000000"
        android:textSize="30sp" />

</GridLayout>